# fly_surrogate

./: .gitignore  CITATION.cff  LICENSE  README.md  environment_engine.py  environment_engine_taichi.py  inference_surrogate.py  pyproject.toml  sobolev_train.py  train_surrogate.py  train_surrogate_jax.py
notebooks/: train_surrogate.ipynb
sobolev_outputs/: sobolev_jacobian_result.json
sobolev_outputs_s0/: sobolev_jacobian_result.json
