[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fly_surrogate"
version = "0.1.0"
description = "LBM Surrogate Training with Taichi and JAX"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "HaoLi", email = "haoli26@buaa.edu.cn" },
]

# --- CRITICAL DEPENDENCIES FOR COLAB ---
dependencies = [
    "taichi>=1.7.0",    # Essential: The Fluid Solver (Not on Colab by default)
    "jax",              # Core ML Framework
    "dm-haiku",         # Neural Network Library
    "optax",            # Optimizer
    "numpy",
    "matplotlib"
]

# 1. TELL SETUPTOOLS TO FIND YOUR SCRIPTS
[tool.setuptools.packages.find]
where = ["."]
# This ensures it finds 'environment_engine_taichi.py' and your training script
include = ["*"] 

# 2. INCLUDE DATA FILES (Checkpoints, Visualizations)
[tool.setuptools.package-data]
# This ensures pickle files (checkpoints) are included if you package it
"*" = ["*.pkl", "*.gif"]
