[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fly_surrogate"
version = "0.1.0"
description = "Bio-Fluid Surrogate: Hybrid Physics-ML Aerodynamics"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "HaoLi", email = "haoli26@buaa.edu.cn" },
]

# --- CRITICAL DEPENDENCIES FOR COLAB ---
dependencies = [
    "taichi>=1.7.0",    # Essential: The Fluid Solver 
    "jax",              # Core ML Framework
    "dm-haiku",         # Neural Network Library
    "optax",            # Optimizer
    "numpy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]
# This ensures it finds 'environment_engine_taichi.py' and raining script
include = ["*"] 

# 2. INCLUDE DATA FILES (Checkpoints, Visualizations)
[tool.setuptools.package-data]
# This ensures pickle files (checkpoints) are included
"*" = ["*.pkl", "*.gif"]
