[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fly_surrogate"
version = "0.1.0"
description = "Hybrid Physics-ML Aerodynamics Framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Hao Li", email = "haoli26@buaa.edu.cn" },
]

# --- CRITICAL DEPENDENCIES FOR COLAB ---
dependencies = [
    "taichi>=1.7.0",    # Essential: The Fluid Solver 
    "jax",              # Core ML Framework
    "dm-haiku",         # Neural Network Library
    "optax",            # Optimizer
    "numpy",
    "matplotlib"
]

# --- PACKAGING CONFIGURATION ---
[tool.setuptools]
# Since your scripts (environment_engine.py, etc.) are in the root,
# we tell setuptools to find packages here.
packages = ["fly_surrogate"] 

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]  # Includes your top-level python scripts

[tool.setuptools.package-data]
# Ensures pickle files (checkpoints) and GIFs are included when installed
"*" = ["*.pkl", "*.gif"]